--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">App Demo</string>
     <string name="scroll_aware_fab_behavior">recipe.android.vogorecipe.custom.ScrollAwareFABBehavior</string>
-    <string name="new_word">New Word</string>
+    <string name="your_word">Your word</string>
     <string name="detail_recipe">Recipe Information</string>
     <string name="new_ingredient">New Ingredient</string>
 
 
-    <string name="dish_hint_name">Name(*)</string>
+    <string name="dish_hint_name">For example: \"Hello\"</string>
+
+
     <string name="dish_hint_ingredient">Ingredients</string>
     <string name="dish_hint_description">Description</string>
     <string name="dish_hint_portions">Portions</string>
@@ -15,6 +17,9 @@
     <string name="btn_new_recipe">New Recipe</string>
     <string name="btn_update_recipe">Update Recipe</string>
     <string name="btn_new_ingredient">New Ingredient</string>
+
+    <string name="label_UK">UK</string>
+    <string name="label_US">US</string>
 
     <array name="recipes_array">
         <item>Vegetarian</item>
