--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">App Demo</string>
-    <string name="scroll_aware_fab_behavior">recipe.android.vogorecipe.custom.ScrollAwareFABBehavior</string>
+    <string name="scroll_aware_fab_behavior">com.tienganh.vocabulary.custom.ScrollAwareFABBehavior</string>
     <string name="your_word">Your word</string>
     <string name="detail_recipe">Recipe Information</string>
     <string name="new_ingredient">New Ingredient</string>
